--- a/style.css
+++ b/style.css
@@ -24,6 +24,46 @@ body {
     color: var(--primary-txt);
 }
 
+.loader {
+    background-color: white;
+    height: 100dvh;
+    width: 100%;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+
+    border-top: 4px solid var(--primary-color);
+    border-right: 4px solid var(--primary-color);
+    border-bottom: 4px solid var(--primary-color);
+    border-left: 4px solid white;
+
+    animation: spin 1s linear infinite;
+}
+
+.hide-overflow {
+    overflow: hidden;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .warning-container {
     display: none;
     position: fixed;
